# jungle_survival

./: .gitignore  Cargo.toml  FILEMAP.md  REFACTORING_SUMMARY.md
src/: building.rs  chunk_physics.rs  constants.rs  debug.rs  game.rs  interaction.rs  main.rs  pixel_world.rs  player.rs  tree_chopping.rs  tree_metadata.rs
src/debug/: README.md
src/input/: README.md  mod.rs
src/physics/: README.md  chunk_detection.rs  chunk_rendering.rs  chunk_splitting.rs  collider_update.rs  components.rs  mod.rs
src/player/: README.md  components.rs  mod.rs  movement.rs  rendering.rs
src/tools/: README.md  components.rs  hand.rs  mod.rs  switching.rs  usage.rs
src/ui/: README.md  debug_display.rs  mod.rs  tool_indicator.rs
src/world/: README.md  digging.rs  ground_colliders.rs  materials.rs  mod.rs  particles.rs  pixel_world.rs  service.rs  terrain.rs
